--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "last 1 version, >1%, IE 10"
   ],
   "devDependencies": {
+    "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-htmlmin": "^5.0.1",
